Sun Jul 14 21:33:32 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Do not process commands if the sock->user_data is NULL.
	  Affected file silcd/command.c.

Tue Jul  9 19:03:11 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Fixed buffer overflow and security problems (loosing bits
	  in CFB encryption) in SILC RNG.  Problems reported by
	  Markku-Juhani O. Saarinen <mjos@saturn.tcs.hut.fi>.

Sun Jul  7 13:10:01 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Added yet more checks that client is not expired on global
	  list if it is on channels.  Affected file is
	  silcd/command_reply.c.

Sat Jul  6 11:45:11 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Merged c0ffee's MIME signal patch which adds support for
	  sending also MIME messages in Irssi SILC Client, and handling
	  received MIME messages in a signal (and perhaps doing something
	  to non-textual MIME messages).

Sun Jun 30 01:30:22 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Fixed pending command deletion in server and client library
	  to check the whole list instead of breaking after first found.
	  The affected files are silcd/command.[ch] and 
	  lib/silcclient/command.[ch].

Sat Jun 29 17:40:12 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Return NO_SUCH_CHANNEL error in USERS for channel that is
	  secret or private, otherwise it's possible to find out
	  whether a secret channel exists or not.  Affected file
	  silcd/command.c.

	* If CMODE change fails during the mode setting, assure that
	  the old mode mask is set for the channel back.  Affected
	  file silcd/command.c.

	* Fixed passphrase saving on +a channel on normal server
	  after successful JOIN command.  Affected file silcd/command.c.

Fri Jun 28 11:53:25 CEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Remove server/router operator privileges in DETACH command,
	  since it's possible to resume to server where these
	  privileges would not be allowed for the client.  Affected